--- a/src/thesis/FXML_Learn.fxml
+++ b/src/thesis/FXML_Learn.fxml
@@ -69,6 +69,11 @@
                   <Font size="24.0" />
                </font>
             </Label>
+            <Label fx:id="nameLabel" alignment="CENTER" layoutX="309.0" layoutY="117.0" prefHeight="29.0" prefWidth="319.0">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
       <VBox fx:id="vbox" alignment="TOP_CENTER" layoutY="60.0" prefHeight="515.0" prefWidth="193.0">
